--- a/charts/fluent-operator/templates/fluentbit-output-kafka.yaml
+++ b/charts/fluent-operator/templates/fluentbit-output-kafka.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.Kubernetes -}}
+{{- if .Values.kubernetes.enabled -}}
 {{- if .Values.fluentbit.output.kafka.enable -}}
 apiVersion: fluentbit.fluent.io/v1alpha2
 kind: ClusterOutput
