--- a/charts/fluent-operator/templates/fluentbit-lua-config.yaml
+++ b/charts/fluent-operator/templates/fluentbit-lua-config.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.kubernetes.enabled -}}
+{{- if or .Values.kubernetes.enabled .Values.Kubernetes -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
