--- a/charts/fluent-operator/templates/fluentbit-output-forward.yaml
+++ b/charts/fluent-operator/templates/fluentbit-output-forward.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.kubernetes.enabled -}}
+{{- if or .Values.kubernetes.enabled .Values.Kubernetes -}}
 {{- if .Values.fluentd.enable -}}
 apiVersion: fluentbit.fluent.io/v1alpha2
 kind: ClusterOutput
