--- a/charts/fluent-operator/templates/fluentd-output-opensearch.yaml
+++ b/charts/fluent-operator/templates/fluentd-output-opensearch.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.kubernetes.enabled -}}
+{{- if or .Values.kubernetes.enabled .Values.Kubernetes -}}
 {{- if .Values.fluentd.enable -}}
 {{- if .Values.fluentd.output.opensearch.enable -}}
 apiVersion: fluentd.fluent.io/v1alpha1
